package ejercicio1.entrega3;

public class Cocina {
    public void prepararPedido() {
        System.out.println("Preparando pedido en la cocina.");
    }
}
