package ejercicio1.entrega3;

public interface Comando {
    void ejecutar();
}
