package ejercicio1.entrega3;

public class ComandoOrdenar implements Comando {
    @Override
    public void ejecutar() {
        System.out.println("Toamdno orden.");
    }
}
