package ejercicio1.entrega3;

public class ComandoReservar implements Comando {
    @Override
    public void ejecutar() {
        System.out.println("Reservando mesa.");
    }
}
