package ejercicio1.entrega3;

public class Entrega {
    public void entregarPedido() {
        System.out.println("Entregando pedido al cliente.");
    }
}
