package ejercicio1.entrega3;

public class ServicioCliente {
    public void servirPedido() {
        System.out.println("Sirviendo pedido al cliente.");
    }
}
