package ejercicio1.entrega3.patronEspecifico;

public interface EstadoMesa {
    void solicitar(Mesa mesa);
    void ocupar(Mesa mesa);
    void liberar(Mesa mesa);
}
